# CryptoGateway

./: CMakeLists.txt  CryptoGateway.h  RC4_Hash.cpp  RC4_Hash.h  XMLEncryption.cpp  XMLEncryption.h  binaryEncryption.cpp  binaryEncryption.h  cryptoCHeaders.h  cryptoCSource.cpp  cryptoConstants.cpp  cryptoConstants.h  cryptoError.cpp  cryptoError.h  cryptoHash.cpp  cryptoHash.h  cryptoLogging.cpp  cryptoLogging.h  cryptoNumber.cpp  cryptoNumber.h  cryptoPublicKey.cpp  cryptoPublicKey.h  gateway.cpp  gateway.h  hexConversion.cpp  hexConversion.h  keyBank.cpp  keyBank.h  message.cpp  message.h  publicKeyPackage.cpp  publicKeyPackage.h  streamCipher.cpp  streamCipher.h  streamPackage.cpp  streamPackage.h  user.cpp  user.h
C_Algorithms/: c_BaseTen.c  c_BaseTen.h  c_numberDefinitions.c  c_numberDefinitions.h  cryptoCConstants.h
Tests/: CMakeLists.txt  c_cryptoTesting.cpp  c_cryptoTesting.h  cryptoFileTest.cpp  cryptoFileTest.h  cryptoNumberTest.cpp  cryptoTest.cpp  cryptoTest.h  gatewayTest.cpp  gatewayTest.h  hashTest.cpp  hashTest.h  publicKeyTest.h  staticTestKeys.cpp  staticTestKeys.h  streamTest.cpp  streamTest.h  testKeyGeneration.cpp  testKeyGeneration.h
